Speed and position calculations.